--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -13,10 +13,10 @@
     <nav class="navbar navbar-expand-lg">
       <div class="container">
         <a href=".index.html" class="navbar-brabd">
-          <img src="/frontend/images/logo-icon.svg" alt="Logo" height="50px" width="auto" />
+          <img src="./images/logo-icon.svg" alt="Logo" height="50px" width="auto" />
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle">
-          <img src="/frontend/images/menu-icon.svg" alt="Hamburger Icon" height="40px" width="auto" />
+          <img src="./images/menu-icon.svg" alt="Hamburger Icon" height="40px" width="auto" />
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
