--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -131,7 +131,7 @@
       <div class="container py-5">
         <div class="d-flex justify-content-between flex-column gap-5 gap-md-0 flex-md-row align-items-center px-3 mb-5">
           <a href="./index.html">
-            <img src="/frontend/images/logo-icon.svg" alt="Logo" height="120px" width="auto" />
+            <img src="./images/logo-icon.svg" alt="Logo" height="120px" width="auto" />
           </a>
           <div class="col-12 col-sm-8 col-md-7 col-lg-5 col-xl-4">
             <h1 class="text-white mb-3 text-center text-md-start">Subscribe to our Newsletter</h1>
