--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -12,7 +12,7 @@
 
     <nav class="navbar navbar-expand-lg">
       <div class="container">
-        <a href=".index.html" class="navbar-brabd">
+        <a href="./index.html" class="navbar-brabd">
           <img src="./images/logo-icon.svg" alt="Logo" height="50px" width="auto" />
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle">
