--- a/frontend/pricing.html
+++ b/frontend/pricing.html
@@ -57,7 +57,41 @@
 
 
     <!-- ↑ Hero ↑ -->
+       <section class="py-5 mt-5 bg-light">
+      <div class="container">
+        <div class="row align-item-center">
+          <div class="col-lg-6 my-4">
+            <form class="appointment-info shadow bg-light p-5">
+              <h3 class="display-4">Book an appointment</h3>
+              <h5 class="text-danger my-4">Easily schedule your consultation with our specialists</h5>
+              <label for="text" class="form-label">Full Name</label>
+              <input type="text" class="form-control" /><br />
+              <label for="text" class="form-label">Contact Number</label>
+              <input type="text" class="form-control" /><br />
+              <label for="email" class="form-label">Email</label>
+              <input type="email" class="form-control" placeholder="youremail@here.com" /><br />
 
+              <button class="btn btn-fun btn-md d-grid px-5 mt-3" type="button">Book Appointment</button>
+            </form>
+          </div>
+          <div class="col-lg-6 appointment-info shadow bg-light my-4 px-5">
+            <h1 class="display-3" style="margin-top: 50px">Patient Information.</h1>
+            <p>Get a referral from Your General Practitiner.</p>
+            <hr class="my-4" />
+
+            <h3>Patients are requested to bring the following to all appointments:</h3>
+            <ul>
+              <li>Doctor’s referral.</li>
+              <li>Current Medicare card.</li>
+              <li>Private health insurance fund name & member number.</li>
+              <li>Age pension or Centrelink health care card</li>
+              <li>Any recent test results you have available.</li>
+              <li>A list of ALL of your medications</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- ↓ Footer ↓ -->
 
     <footer>
