--- a/frontend/pricing.html
+++ b/frontend/pricing.html
@@ -48,9 +48,9 @@
 
     <!-- ↓ Hero ↓ -->
 
-   <section class="p-5 d-flex justify-content-center align-items-center flex-column pageNotReady">
+   <section class="p-5 d-flex justify-content-center align-items-center flex-column">
     <h1 class="text-center mb-5">Oops! This page is not ready yet!</h1>
-    <a href="./index.html" class="text-black">Go home</a>
+    
 
    </section>
 
