feature page updates

--- a/frontend/pricing.html
+++ b/frontend/pricing.html
@@ -50,7 +50,7 @@
 
    <section class="p-5 d-flex justify-content-center align-items-center bg-light flex-column">
     <h1 class="text-center mb-5">Choose your path to productivity!</h1>
-     <a href="./signup.html" class="btn btn-dark">Start for free</a>
+     <a href="./signup.html" class="btn btn-danger btn-lg">Start for free</a>
     
 
    </section>
