--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -50,7 +50,7 @@
 
    <section class=" d-flex justify-content-center align-items-center flex-column bg-img">
         <div class="bg-white p-4 shadow rounded">
-            <h2 class="mb-3">Login</h2>
+            <h2 class="mb-3">Sign Up</h2>
             <form action="" id="SignUpForm"></form>
                 <input type="text" id="FirsttName" placeholder="First Name" class="mb-3 form-control shadow-sm" required>
                 <input type="text" id="LasttName" placeholder="Last Name" class="mb-3 form-control shadow-sm" required>
